<resources>
    <string name="app_name">coupang_eats</string>

    <!--공통-->
    <string name="img_app_logo">logo image</string>
    <string name="ic_back">back icon</string>

    <!--메뉴-->
    <string name="menu_home">홈</string>
    <string name="menu_search">검색</string>
    <string name="menu_heart">즐겨찾기</string>
    <string name="menu_order">주문내역</string>
    <string name="menu_myeats">My 이츠</string>
    <string name="menu_matching">매칭</string>
    <string name="menu_mypage">내페이지</string>

    <!--에러처리-->
    <string name="default_fail">네트워크연결이 원활하지 않습니다</string>

    <!-- 로그인 -->
    <string name="login">로그인</string>
    <string name="login_id_hint">아이디(이메일)</string>
    <string name="login_email_hint">직접입력</string>
    <string name="login_email_delimiter">\@</string>
    <string name="login_name_hint">이름</string>
    <string name="login_signup">회원가입</string>

    <!-- 회원가입 -->
    <string name="signup">회원가입</string>
    <string name="signup_id_hint">아이디(이메일)</string>
    <string name="signup_email_hint">직접입력</string>
    <string name="signup_email_delimiter">\@</string>
    <string name="signup_name_hint">이름</string>
    <string name="signup_password_hint">비밀번호</string>
    <string name="signup_password_confirm_hint">비밀번호 확인</string>
    <string name="signup_agree_detail">
        동의에는 필수 및 선택 목적(광고성 정보 수신 포함)에 대한 동의가 포함되어 있으며, 선택 목적의 동의를 거부하시는 경우에도 서비스 이용이 가능합니다.
    </string>
</resources>