<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_up_sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sign_up_back_iv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/ic_back"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signup_coupang_logo_iv"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/img_app_logo"
        android:src="@drawable/coupang_logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_sign_up_tv" />

    <TextView
        android:id="@+id/sign_up_info_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="회원정보를 입력해주세요"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_coupang_logo_iv"
        app:layout_constraintStart_toStartOf="parent" />

    //editText뷰들
    <GridLayout
        android:id="@+id/sign_up_id_et"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="20dp"
        android:columnCount="3"
        android:rowCount="1"
        app:layout_constraintTop_toBottomOf="@id/sign_up_info_text_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:padding="12dp"
            android:layout_column="0"
            android:src="@drawable/ic_mail"
            android:background="@drawable/border_right"
            />

        <EditText
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:autofillHints="@null"
            android:background="@null"
            android:hint="@string/signup_id_hint"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="10dp"
            />

    </GridLayout>
    <GridLayout
        android:id="@+id/sign_up_pw_et"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="20dp"
        android:columnCount="3"
        android:rowCount="1"
        app:layout_constraintTop_toBottomOf="@id/sign_up_id_et"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:padding="12dp"
            android:layout_column="0"
            android:src="@drawable/ic_lock"
            android:background="@drawable/border_right"
            />

        <EditText
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:autofillHints="@null"
            android:background="@null"
            android:hint="@string/signup_password_hint"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="10dp"
            />

    </GridLayout>
    <GridLayout
        android:id="@+id/sign_up_name_et"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="20dp"
        android:columnCount="3"
        android:rowCount="1"
        app:layout_constraintTop_toBottomOf="@id/sign_up_pw_et"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:padding="12dp"
            android:layout_column="0"
            android:src="@drawable/ic_user"
            android:background="@drawable/border_right"
            />

        <EditText
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:autofillHints="@null"
            android:background="@null"
            android:hint="@string/signup_name_hint"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="10dp"
            />

    </GridLayout>
    <GridLayout
        android:id="@+id/sign_up_phone_et"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="20dp"
        android:columnCount="3"
        android:rowCount="1"
        app:layout_constraintTop_toBottomOf="@id/sign_up_name_et"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:padding="12dp"
            android:layout_column="0"
            android:src="@drawable/ic_phone"
            android:background="@drawable/border_right"
            />

        <EditText
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:autofillHints="@null"
            android:background="@null"
            android:hint="휴대폰 번호"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="10dp"
            />

    </GridLayout>

    //동의합니다 부분
    <View
        android:id="@+id/sign_up_under_view"
        android:layout_width="0dp"
        android:layout_height="2px"
        android:layout_marginTop="20dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/sign_up_phone_et"
        app:layout_constraintStart_toStartOf="@id/sign_up_phone_et"
        app:layout_constraintEnd_toEndOf="@id/sign_up_phone_et"
         />
    <TextView
        android:id="@+id/sign_up_info_agree_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="쿠팡 서비스약관에 동의해주세요"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_under_view"
        app:layout_constraintStart_toStartOf="parent" />
    <CheckBox
        android:id="@+id/sign_up_agree_checkbox_cb"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_info_agree_tv"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/sign_up_all_agree_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="모두 동의합니다."
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/sign_up_agree_checkbox_cb"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_agree_checkbox_cb"
        app:layout_constraintStart_toEndOf="@id/sign_up_agree_checkbox_cb" />
    <TextView
        android:id="@+id/sign_up_agree_detail_tv"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:text="@string/signup_agree_detail"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_agree_checkbox_cb"
        app:layout_constraintStart_toStartOf="@id/sign_up_all_agree_tv" />


    //버튼
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/primary"
        android:text="동의하고 가입하기"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_agree_detail_tv" />
    <ProgressBar
        android:id="@+id/sign_up_loading_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:indeterminateTint="@color/primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>