<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/sign_in_exit_iv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/ic_back"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/icon_exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sign_in_logo_iv"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/coupang_logo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_exit_iv"
        />

    <GridLayout
        android:id="@+id/sign_in_id_et"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="20dp"
        android:columnCount="3"
        android:rowCount="1"
        app:layout_constraintTop_toBottomOf="@id/sign_in_logo_iv"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="이메일"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:id="@+id/sign_in_id_edittext_et"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:autofillHints="@null"
            android:background="@null"
            android:hint="@string/signup_id_hint"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="10dp"
            />
    </GridLayout>
    <GridLayout
        android:id="@+id/sign_in_pw_et"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="20dp"
        android:columnCount="3"
        android:rowCount="1"
        app:layout_constraintTop_toBottomOf="@id/sign_in_id_et"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="비밀번호"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:id="@+id/sign_in_pw_edittext_et"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:autofillHints="@null"
            android:background="@null"
            android:hint="@string/signup_password_hint"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="10dp"
            />
    </GridLayout>

    //버튼
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_sign_in_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/secondary"
        android:text="로그인"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_pw_et" />

</androidx.constraintlayout.widget.ConstraintLayout>